force-app/main/default/objects/CountryRegion__mdt/CountryRegion__mdt.object-meta.xml
<CustomObject>
    <label>Country Region</label>
    <pluralLabel>Country Regions</pluralLabel>
</CustomObject>