force-app/main/default/objects/CountryRegion__mdt/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <label>Geography</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APJ</fullName>
                <default>true</default>
                <label>APJ</label>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>