force-app/main/default/objects/CountryRegion__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMERICAS</fullName>
                <default>true</default>
                <label>AMERICAS</label>
            </value>
            <value>
                <fullName>AMERICAS West</fullName>
            </value>
            <value>
                <fullName>APJ ANZ</fullName>
            </value>
            <value>
                <fullName>APJ ASIA</fullName>
            </value>
            <value>
                <fullName>APJ Japan</fullName>
            </value>
            <value>
                <fullName>EMEA Central</fullName>
            </value>
            <value>
                <fullName>EMEA France</fullName>
            </value>
            <value>
                <fullName>EMEA MENAT</fullName>
            </value>
            <value>
                <fullName>EMEA North</fullName>
            </value>
            <value>
                <fullName>EMEA South</fullName>
            </value>
            <value>
                <fullName>EMEA UK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>